--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 								</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Graphics designer</span></li>
-									<li class="d-flex"><span>Domain:</span> <span>Marketing, Sales</span></li>
+									<li class="d-flex"><span>Domain:</span> <span>UI/UX & Software</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Master of Computer Application</span></li>
 									<li class="d-flex"><span>Language:</span> <span>Hindi, English</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Sports, Travelling</span></li>
@@ -563,7 +563,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://shashwatportfolio.vercel.app/" target="_blank">Shashwat Kashyap</a>
+	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://shashwatportfolio.vercel.app/" target="_blank">Shashwat Kashyap</a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
