--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                   class="contact-subtitle"
                   href="https://www.linkedin.com/in/yash-gupta-930914157?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
                   target="_blank"
-                  >Shobhit</a
+                  >Yash Gupta</a
                 >
               </div>
             </div>
