--- a/index.html
+++ b/index.html
@@ -209,20 +209,9 @@
     <div class="skills-name">HTML5</div>
     <div class="skills-name">CSS3</div>
     <div class="skills-name">JavaScript</div>
-    <div class="skills-name">React.js</div>
-    <div class="skills-name">Node.js</div>
 
     <!-- Databases -->
     <div class="skills-name">MySQL</div>
-    <div class="skills-name">MongoDB</div>
-
-    <!-- Data Analytics & AI -->
-    <div class="skills-name">Pandas</div>
-    <div class="skills-name">NumPy</div>
-    <div class="skills-name">Matplotlib</div>
-    <div class="skills-name">Scikit-learn</div>
-    <div class="skills-name">TensorFlow (Basics)</div>
-    <div class="skills-name">Generative AI Tools (ChatGPT, Gemini, Copilot)</div>
 
     <!-- Developer Tools -->
     <div class="skills-name">Git / GitHub</div>
@@ -236,7 +225,6 @@
 
     <!-- Core Computer Science -->
     <div class="skills-name">Data Structures & Algorithms</div>
-    <div class="skills-name">Operating Systems</div>
     <div class="skills-name">DBMS</div>
     <div class="skills-name">Software Engineering</div>
 
@@ -589,7 +577,7 @@
 
       <!-- project1 -->
       <div class="portfolio-content grid swiper-slide">
-        <img src="Assets/voice-assistant.svg" alt="AI Voice Assistant" class="portfolio-img" />
+        <img src="Assets/ai.jpg" alt="AI Voice Assistant" class="portfolio-img" />
 
         <div class="portfolio-data">
           <h3 class="portfolio-title">AI Voice Assistant – Python</h3>
@@ -603,7 +591,7 @@
 
       <!-- project2 -->
       <div class="portfolio-content grid swiper-slide">
-        <img src="Assets/furniture.svg" alt="Furniture E-commerce" class="portfolio-img" />
+        <img src="Assets/furni.jpg" alt="Furniture E-commerce" class="portfolio-img" />
 
         <div class="portfolio-data">
           <h3 class="portfolio-title">Feel the Furniture – E-commerce Website</h3>
@@ -618,39 +606,13 @@
 
       <!-- project3 -->
       <div class="portfolio-content grid swiper-slide">
-        <img src="Assets/mobi-mob.svg" alt="Mobi Mob Website" class="portfolio-img" />
+        <img src="Assets/mobi.jpg" alt="Mobi Mob Website" class="portfolio-img" />
 
         <div class="portfolio-data">
           <h3 class="portfolio-title">Mobi Mob – E-commerce Website</h3>
           <p class="portfolio-description">
             Designed and developed a mobile-shopping website with HTML, CSS, and
             JavaScript, featuring product listings and a simple cart simulation.
-          </p>
-        </div>
-      </div>
-
-      <!-- project4 -->
-      <div class="portfolio-content grid swiper-slide">
-        <img src="Assets/flappy.svg" alt="Flappy Bird Clone" class="portfolio-img" />
-
-        <div class="portfolio-data">
-          <h3 class="portfolio-title">Flappy Bird Clone – Python</h3>
-          <p class="portfolio-description">
-            Created a playable clone of the classic Flappy Bird game in Python,
-            implementing game physics and scoring logic for an engaging experience.
-          </p>
-        </div>
-      </div>
-
-      <!-- project5 -->
-      <div class="portfolio-content grid swiper-slide">
-        <img src="Assets/timetable.svg" alt="Time Table Generator" class="portfolio-img" />
-
-        <div class="portfolio-data">
-          <h3 class="portfolio-title">Time Table Generator</h3>
-          <p class="portfolio-description">
-            Developed a basic web-based timetable generator using HTML and CSS,
-            enabling structured schedule creation with a simple UI.
           </p>
         </div>
       </div>
@@ -749,7 +711,7 @@
               </a>
             </div>
           </div>
-          <p class="footer-copy">By Shashwat Kashyap</p>
+          <p class="footer-copy">By Yash Gupta</p>
         </div>
       </footer>
     </main>
